# CircleAssment

./: .gitignore  README.md  ~$Presentation.pptx
.github/workflows/: main.yml
code/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
code/.github/workflows/: ci.yml  docs.yml  main.yml
code/docs/: class_diagrams.rst  conf.py  index.rst  modules.rst
code/docs/api/: compute_quantity.rst  data_loader.rst  logging_config.rst  myocardial_blood_flow.rst  save_data_manager.rst
code/input_data/: AIF_And_Myo_Masks.tiff  acquisition_times.csv
code/input_data/DICOM_files/: img0003-68.9868.dcm  img0005-68.9868.dcm  img0006-68.9868.dcm  img0007-68.9868.dcm  img0010-68.9868.dcm  img0013-68.9868.dcm  img0015-68.9868.dcm  img0016-68.9868.dcm  img0018-68.9868.dcm  img0019-68.9868.dcm  img0020-68.9868.dcm  img0022-68.9868.dcm  img0023-68.9868.dcm  img0026-68.9868.dcm  img0028-68.9868.dcm  img0030-68.9868.dcm  img0031-68.9868.dcm  img0032-68.9868.dcm  img0034-68.9868.dcm  img0036-68.9868.dcm  img0041-68.9868.dcm  img0042-68.9868.dcm  img0046-68.9868.dcm  img0050-68.9868.dcm  img0051-68.9868.dcm  img0052-68.9868.dcm  img0053-68.9868.dcm  img0054-68.9868.dcm  img0057-68.9868.dcm  img0058-68.9868.dcm
code/results1/: dicom_movie.avi  img0005-68.9868.json  mbf_results.csv
code/src/: compute_quantity.py  data_loader.py  logging_config.py  myocardial_blood_flow.py  myocardial_blood_flow_F_as_amplitude.py  myocardial_blood_flow_fixed_tau_d.py  myocardial_blood_flow_var_tau_d.py  regenerate_results.py  save_data_manager.py
code/tests/: .gitignore  conftest.py  test_save_data_manager.py  test_utils.py
code/tests/integration/: test_workflow.py  test_workflow_Analytical.py  test_workflow_Real.py  test_workflow_Real_fixed_tau_d.py
code/tests/unit/: test_compute_quantity_analitical.py  test_myocardial_blood_flow.py  test_save_data_manager.py  test_save_data_manager_analitical.py
codeCpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  rebuild.ps1  run.ps1
codeCpp/inculde/: ComputeQuantity.h  DicomLoader.h  MyocardialBloodFlow.h  SaveDataManager.h  TiffMaskLoader.h  logger.h
codeCpp/input_data/DICOM_files/: img0004-68.9868.dcm  img0008-68.9868.dcm  img0009-68.9868.dcm  img0011-68.9868.dcm  img0012-68.9868.dcm  img0014-68.9868.dcm  img0017-68.9868.dcm  img0021-68.9868.dcm  img0024-68.9868.dcm  img0025-68.9868.dcm  img0027-68.9868.dcm  img0029-68.9868.dcm  img0033-68.9868.dcm  img0035-68.9868.dcm  img0037-68.9868.dcm  img0038-68.9868.dcm  img0039-68.9868.dcm  img0040-68.9868.dcm  img0043-68.9868.dcm  img0044-68.9868.dcm  img0045-68.9868.dcm  img0047-68.9868.dcm  img0048-68.9868.dcm  img0049-68.9868.dcm  img0055-68.9868.dcm  img0056-68.9868.dcm  img0059-68.9868.dcm  img0060-68.9868.dcm
codeCpp/src/: ComputeQuantity.cpp  DicomLoader.cpp  MyocardialBloodFlow.cpp  SaveDataManager.cpp  TiffMaskLoader.cpp  logger.cpp
codeCpp/tests/: SaveDataManagerTest.cpp
